[package]
name = "futuresdr-two-channel-direction-finding"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1", features = ["rt"] }
rustfft = "6.2"
eframe = "0.27"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
futuresdr = { path = "../..", features = ["seify", "soapy", "egui"] }
